tests/valid/test_type_31.wyal
type nat is (int x) where x >= 0
type pos is (int x) where x > 0

assert:
    forall (int x):
       if:
          x is pos
       then:
          x is nat  