tests/invalid/test_027.wyal
type pos is (int x) where x > 0

assert:
    forall (pos x):
          x-1 is pos